# solid-data-governance-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  docs-PHASES-INDEX.md  phase-0-foundation.md  phase-1-embedding-store-ga.md  podman-compose.yml  run_local.sh  solid-community-rs.env
.github/: CONTRIBUTING.md  pull_request_template.md
.github/workflows/: ci.yml  specification-tests.yml
authz/: Cargo.toml
authz/src/: authorizer.rs
cli/src/: main.rs  serve.rs  test_runner.rs
containers/: Containerfile.api  Containerfile.console
crates/authz/: Cargo.toml
crates/authz/src/: credentials.rs  lib.rs  permissions.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  serve.rs
crates/governance/: Cargo.toml
crates/governance/src/: audit.rs  catalog.rs  lib.rs  policy.rs  tokens.rs
crates/http-types/: Cargo.toml
crates/http-types/src/: error.rs  handler.rs  identifier.rs  lib.rs  metadata.rs  operation.rs  representation.rs
crates/identity/: Cargo.toml
crates/identity/src/: account.rs  client_credentials.rs  lib.rs  pod.rs  webid.rs
crates/integration-tests/: Cargo.toml
crates/integration-tests/src/: client.rs  lib.rs  runner.rs
crates/integration-tests/src/suites/: containers.rs  content_negotiation.rs  error_responses.rs  health.rs  mod.rs  resource_crud.rs
crates/server-core/: Cargo.toml
crates/server-core/src/: app.rs  governance.rs  handler.rs  lib.rs  middleware.rs  pipeline.rs  routing.rs  store.rs
crates/server-core/tests/: governance_http.rs
crates/solid-storage/src/: error.rs  key_value.rs
crates/solid-storage/src/backends/: expiring.rs  memory.rs
crates/static-assets/: Cargo.toml
crates/static-assets/src/: entry.rs  handler.rs  lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: error.rs  key_value.rs  lib.rs  resource_store.rs
crates/storage/src/backends/: file.rs  memory.rs  mod.rs
crates/zarr-storage/: Cargo.toml
crates/zarr-storage/src/: lib.rs  manifest.rs  store.rs  zarr_meta.rs
governance-console/: deno.json
governance-console/src/: build.ts  dev.ts  main.ts  router.ts  router_test.ts
governance-console/src/api/: client.ts
governance-console/src/views/: catalog_view.ts  dataset_view.ts  health_view.ts
governance-console/static/: index.html  styles.css
http-types/: Cargo.toml
http-types/src/: error.rs
identity/: Cargo.toml
identity/src/: client_credentials.rs
integration-tests/: Cargo.toml
integration-tests/src/: runner.rs
integration-tests/src/suites/: mod.rs  wac.rs
scripts/: bootstrap.sh
scripts/python-smoke/: test_zarr_http_range.py
server-core/: Cargo.toml
server-core/src/: app.rs  ldp_handlers.rs  lib.rs  middleware.rs  pipeline.rs  routing.rs  store.rs
solid-storage/: Cargo.toml
solid-storage/src/backends/: file.rs
