[workspace]
members = [
    "crates/server-core",
    "crates/http-types",
    "crates/storage",
    "crates/authz",
    "crates/identity",
    "crates/static-assets",
    "crates/cli",
    "crates/integration-tests",
]
resolver = "2"

[workspace.dependencies]
tokio       = { version = "1.36", features = ["full"] }
hyper       = { version = "1.0",  features = ["full"] }
axum        = "0.7"
serde       = { version = "1.0",  features = ["derive"] }
serde_json  = "1.0"
anyhow      = "1.0"
thiserror   = "1.0"
tracing     = "0.1"
async-trait = "0.1"
uuid        = { version = "1.6",  features = ["v4"] }
bytes       = "1.5"
mime        = "0.3"
url         = "2.5"
oxidate     = "0.1"
reqwest     = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
clap        = { version = "4.5",  features = ["derive", "env"] }
