[package]
name = "authz"
version = "0.1.0"
edition = "2024"
description = "Web Access Control (WAC) and Access Control Policy (ACP) permission evaluation"

[dependencies]
http-types = { path = "../http-types" }
solid-storage = { path = "../solid-storage" }
tokio = { workspace = true }
async-trait = { workspace = true }
url = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
