[package]
name = "solid-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
http-types = { path = "../http-types" }
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
url = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
tempfile = "3"
