[package]
name = "cli"
version = "0.1.0"
edition = "2021"
description = "CLI entry point: argument parsing, config loading, logging setup, and server boot"

[[bin]]
name = "solid-community-rs"
path = "src/main.rs"

[dependencies]
server-core = { path = "../server-core" }
tokio = { workspace = true }
clap = { version = "4.4", features = ["derive", "env"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
