[package]
name        = "cli"
version     = "0.1.0"
edition     = "2021"
description = "CLI entry point: argument parsing, config loading, logging setup, and server boot"

# ── server binary ──────────────────────────────────────────────────────────
[[bin]]
name = "solid-server"
path = "src/serve.rs"

# ── integration-test runner binary ─────────────────────────────────────────
[[bin]]
name = "solid-test"
path = "src/test_runner.rs"

[dependencies]
server-core         = { path = "../server-core" }
integration-tests   = { path = "../integration-tests" }
tokio               = { workspace = true }
clap                = { workspace = true }
tracing             = { workspace = true }
tracing-subscriber  = { version = "0.3", features = ["env-filter"] }
anyhow              = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
