[package]
name = "governance"
version = "0.1.0"
edition = "2024"
description = "Phase 0 governance plane: catalog, DPoP capability tokens, audit log, policy"

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
chrono      = { workspace = true }
uuid        = { workspace = true }
sha2        = { workspace = true }
hex         = { workspace = true }
base64      = { workspace = true }
hmac        = { workspace = true }
jsonwebtoken = { workspace = true }
