[package]
name = "identity"
version = "0.1.0"
edition = "2021"
description = "OIDC provider integration, account/pod management, WebID, client credentials"

[dependencies]
http-types = { path = "../http-types" }
storage = { path = "../storage" }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
