[package]
name = "static-assets"
version = "0.1.0"
edition = "2024"
description = "Static asset serving: URL-to-filesystem mapping with content-type detection and optional caching"

[dependencies]
http-types = { path = "../http-types" }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
mime = { workspace = true }
mime_guess = "2.0"
