[package]
name = "storage"
version = "0.1.0"
edition = "2021"
description = "ResourceStore and KeyValueStore traits with in-memory and file-backed implementations"

[dependencies]
http-types = { path = "../http-types" }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
