[package]
name = "zarr-storage"
version = "0.1.0"
edition = "2024"
description = "Local mmap-backed Zarr v3 chunk storage with manifest-driven addressing"

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
memmap2     = { workspace = true }
sha2        = { workspace = true }
hex         = { workspace = true }
bytes       = { workspace = true }
